--- a/styles/components/projects.css
+++ b/styles/components/projects.css
@@ -43,8 +43,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
-  align-items: left;
   gap: 12px;  
   
   color: var(--color-black);
@@ -56,7 +54,7 @@
 }
 .--projects-list-ico{
   margin: 20px;
-  height: fit-content;
+  height: 60px;
   object-fit: none;
 }
 .--projects-backend-title {
